Bug 1039488 - Turn text-decoration into a shorthand. r=dbaron